<resources>
    <string name="app_name">Tracker</string>
    <string name="action_settings">Settings</string>

    <string name="appSetup">Setting up application files</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <!-- Strings used for fragments for navigation -->
    <string name="requestPermissions">Request Permissions</string>
    <string name="requestRoles">Request Roles</string>
    <string name="openSettings">Open Settings</string>
    <string name="openAccessibility">Open Accessibility Page</string>
    <string name="accessibilityText">Accessibility Service Enabled</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_responses">USSD Logs</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_calllog">Call Logs</string>
    <string name="menu_perms">Permissions</string>
    <string name="menu_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!--    Toolbar USSD Fragments-->
    <string name="deleteAllUSSD">Delete All</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>