<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_responses"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="@string/menu_responses" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_baseline_message_24"
            android:title="@string/menu_messages" />
        <item
            android:id="@+id/nav_calls"
            android:icon="@drawable/ic_baseline_call_24"
            android:title="@string/menu_calllog" />

        <item
            android:id="@+id/nav_permissions"
            android:icon="@drawable/ic_baseline_lock_24"
            android:title="@string/menu_perms" />

        <item
            android:id="@+id/nav_locations"
            android:icon="@drawable/rounded_rectangle_orange"
            android:title="@string/menu_locations" />
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_settings" />
    </group>
</menu>