<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_responses">

    <fragment
        android:id="@+id/nav_permissions"
        android:name="com.reas.tracker.PermissionsFragment"
        android:label="@string/menu_perms"
        tools:layout="@layout/fragment_permissions" />

    <fragment
        android:id="@+id/nav_responses"
        android:name="com.reas.tracker.ui.USSD.USSDFragment"
        android:label="@string/menu_responses"
        tools:layout="@layout/fragment_ussd" />

    <fragment
        android:id="@+id/nav_messages"
        android:name="com.reas.tracker.ui.messages.MessagesFragment"
        android:label="@string/menu_messages"
        tools:layout="@layout/fragment_messsages" />

    <fragment
        android:id="@+id/nav_calls"
        android:name="com.reas.tracker.ui.calls.CallsFragment"
        android:label="@string/menu_calllog"
        tools:layout="@layout/fragment_calls" />

    <activity
        android:id="@+id/nav_settings"
        android:name="com.reas.tracker.SettingsActivity"
        android:label="@string/menu_settings"
        tools:layout="@layout/settings_activity" />

    <fragment
        android:id="@+id/nav_locations"
        android:name="com.reas.tracker.ui.location.LocationFragment"
        android:label="@string/menu_locations"
        tools:layout="@layout/fragment_location" />
</navigation>