<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PermissionsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarPerms"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbarPerms"
            app:titleEnabled="false" >


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarPerms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/relativeLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <androidx.appcompat.widget.AppCompatCheckedTextView
                android:id="@+id/permission1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="96dp"
                android:checkMark="@drawable/ic_baseline_clear_24"
                android:text="@string/hello_first_fragment" />

            <androidx.appcompat.widget.AppCompatCheckedTextView
                android:id="@+id/permission2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/permission1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkMark="@drawable/ic_baseline_clear_24"
                android:text="@string/hello_first_fragment" />

            <androidx.appcompat.widget.AppCompatCheckedTextView
                android:id="@+id/permission3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/permission2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkMark="@drawable/ic_baseline_clear_24"
                android:text="@string/hello_first_fragment" />


            <androidx.appcompat.widget.AppCompatCheckedTextView
                android:id="@+id/permission4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/permission3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkMark="@drawable/ic_baseline_clear_24"
                android:text="@string/hello_first_fragment" />


            <androidx.appcompat.widget.AppCompatCheckedTextView
                android:id="@+id/permission5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/permission4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkMark="@drawable/ic_baseline_clear_24"
                android:text="@string/hello_first_fragment" />

            <androidx.appcompat.widget.AppCompatCheckedTextView
                android:id="@+id/permission6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/permission5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkMark="@drawable/ic_baseline_clear_24"
                android:text="@string/hello_first_fragment" />

            <androidx.appcompat.widget.AppCompatCheckedTextView
                android:id="@+id/permission7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/permission6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkMark="@drawable/ic_baseline_clear_24"
                android:text="@string/hello_first_fragment" />

            <androidx.appcompat.widget.AppCompatCheckedTextView
                android:id="@+id/permission8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/permission7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkMark="@drawable/ic_baseline_clear_24"
                android:text="@string/hello_first_fragment" />

            <androidx.appcompat.widget.AppCompatCheckedTextView
                android:id="@+id/permission9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/permission8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkMark="@drawable/ic_baseline_clear_24"
                android:text="@string/hello_first_fragment" />

            <androidx.appcompat.widget.AppCompatCheckedTextView
                android:id="@+id/permission10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/permission9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkMark="@drawable/ic_baseline_clear_24"
                android:text="@string/hello_first_fragment" />

            <androidx.appcompat.widget.AppCompatCheckedTextView
                android:id="@+id/permission11"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/permission10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkMark="@drawable/ic_baseline_clear_24"
                android:text="@string/accessibilityText" />


            <Button
                android:id="@+id/requestRoles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/requestRoles"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/openAccessibility"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/requestPermissions" />

            <Button
                android:id="@+id/requestPermissions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/requestPermissions"
                app:layout_constraintEnd_toStartOf="@+id/openSettings"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/permission11" />

            <Button
                android:id="@+id/openSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/openSettings"
                app:layout_constraintBottom_toBottomOf="@+id/requestPermissions"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/requestPermissions"
                app:layout_constraintTop_toTopOf="@+id/requestPermissions" />

            <Button
                android:id="@+id/openAccessibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/openAccessibility"
                app:layout_constraintBottom_toBottomOf="@+id/requestRoles"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/requestPermissions"
                app:layout_constraintTop_toTopOf="@+id/requestRoles" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>